# haskell-benchmarks

./: README.md  template-new.tpl  template.tpl
canny/: CHANGELOG.md  README.md  canny.cabal  stack.yaml
canny/bench/: CannyBench.hs  CannyBenchSteps.hs
canny/src/: Canny.hs
canny/src/Canny/: Accelerate.hs  Friday.hs  Massiv.hs  Repa.hs  Yarr.hs
containers-benchmarks/: CHANGELOG.md  LICENSE  README.md  containers-benchmarks.cabal  stack.yaml
containers-benchmarks/bench/: Bench.hs
containers-benchmarks/src/: Lib.hs
loop-unrolling/: CHANGELOG.md  README.md  loop-unrolling.cabal  stack.yaml
loop-unrolling/bench/: Bench.hs
new-random-benchmarks/: CHANGELOG.md  README.md  random-benchmarks.cabal  stack-old-random.yaml  stack.yaml
new-random-benchmarks/app/: Main.hs
new-random-benchmarks/bench/: Random.hs
nub/: CHANGELOG.md  LICENSE  README.md  nub.cabal
nub/bench/: Bench.hs
nub/src/: Lib.hs
parallel-any-all/: CHANGELOG.md  README.md  parallel-any-all.cabal  stack.yaml
parallel-any-all/bench/: Any.hs
random-benchmarks/: README.md  random-benchmarks.cabal  stack.yaml
random-benchmarks/bench/: Random.hs
random-benchmarks/src/: Lib.hs
random-libraries/: CHANGELOG.md  README.md  random-libraries.cabal  stack.yaml
random-libraries/src/: Lib.hs
