name:                canny
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/canny#readme>
homepage:            https://github.com/lehins/canny
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Canny
                     , Canny.Accelerate
                     , Canny.Friday
                     , Canny.Massiv
                     , Canny.Repa
                     , Canny.Yarr

  build-depends:       Color
                     , accelerate
                     , accelerate-examples
                     , accelerate-io
                     , accelerate-llvm-native
                     , accelerate-io-bmp
                     , accelerate-io-bytestring
                     , accelerate-io-vector
                     , accelerate-io-repa
                     , base            >= 4.8 && < 5
                     , colour-accelerate
                     , deepseq
                     , massiv
                     , massiv-io
                     , repa
                     , repa-algorithms
                     , repa-io
                     , vector
                     , JuicyPixels
                     , yarr
                     , storable-tuple
                     , friday

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

benchmark bench-canny
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             CannyBench.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
                       -- -fllvm -optlo-O3 -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100
  build-depends:       base
                     , accelerate
                     , accelerate-io
                     , accelerate-io-repa
                     , accelerate-examples
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-io
                     , canny
                     , friday
  default-language:    Haskell2010

benchmark bench-canny-steps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             CannyBenchSteps.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
                       -- -fllvm -optlo-O3 -fno-liberate-case -funfolding-use-threshold100 -funfolding-keeness-factor100
  build-depends:       base
                     , accelerate
                     , accelerate-io
                     , accelerate-io-repa
                     , accelerate-llvm-native
                     , accelerate-examples
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-io
                     , canny
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/haskell-benchmarks
