name:                random-benchmarks
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/random-benchmarks#readme>
homepage:            https://github.com/lehins/random-benchmarks
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10


benchmark random
  type: exitcode-stdio-1.0
  main-is: Random.hs
  hs-source-dirs: bench
  ghc-options: -Wall -O2 -threaded
  build-depends: base
               , criterion

               , random
               , mersenne-random-pure64
               , xorshift
               , AC-Random
               , Random123
               , tf-random
               , pcg-random
               , Xorshift128Plus
               , pcgen
               , splitmix

               , mwc-random
               , sfmt
               , mersenne-random
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehins/random-benchmarks
